{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 142,
  "lineage": "3963db77-7720-4fca-50fb-5f5ec71d45a2",
  "resources": [
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.149.34.237",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-12-13T00:47:55.020-08:00",
            "id": "projects/playground-s-11-ae58ac63/global/addresses/l7-xlb-static-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "l7-xlb-static-ip",
            "prefix_length": 0,
            "project": "playground-s-11-ae58ac63",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ae58ac63/global/addresses/l7-xlb-static-ip"
          }
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-13T00:53:29.119-08:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/playground-s-11-ae58ac63/regions/us-central1/subnetworks/l7-xlb-subnet",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "l7-xlb-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ae58ac63/global/networks/customvpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "playground-s-11-ae58ac63",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ae58ac63/regions/us-central1/subnetworks/l7-xlb-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": []
    },
    {
      "module": "module.ilb",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "google_compute_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]"
    },
    {
      "module": "module.ilb",
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": []
    },
    {
      "module": "module.ilb",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "ilb_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-12T23:26:17.710-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/playground-s-11-ae58ac63/regions/us-central1/subnetworks/l7-ilb-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "l7-ilb-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ae58ac63/global/networks/customvpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "playground-s-11-ae58ac63",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ae58ac63/regions/us-central1/subnetworks/l7-ilb-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.ilb",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "proxy_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-12T23:26:17.908-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/playground-s-11-ae58ac63/regions/us-central1/subnetworks/l7-ilb-proxy-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "l7-ilb-proxy-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ae58ac63/global/networks/customvpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "playground-s-11-ae58ac63",
            "purpose": "INTERNAL_HTTPS_LOAD_BALANCER",
            "region": "us-central1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ae58ac63/regions/us-central1/subnetworks/l7-ilb-proxy-subnet"
          },
          "dependencies": [
            "module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.mysqldb",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.236.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-12-12T23:06:32.447-08:00",
            "id": "projects/playground-s-11-ae58ac63/global/addresses/private-ip-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "private-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ae58ac63/global/networks/customvpc",
            "prefix_length": 16,
            "project": "playground-s-11-ae58ac63",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ae58ac63/global/addresses/private-ip-address"
          },
          "dependencies": [
            "module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "egress-internet",
          "schema_version": 0,
          "attributes": {
            "description": "route through IGW to access internet",
            "dest_range": "0.0.0.0/0",
            "id": "projects/playground-s-11-ae58ac63/global/routes/egress-internet",
            "name": "egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ae58ac63/global/networks/customvpc",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ae58ac63/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "playground-s-11-ae58ac63",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ae58ac63/global/routes/egress-internet",
            "tags": [
              "egress-inet"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "europe-west1/subnet-01",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-12T23:06:33.762-08:00",
            "gateway_address": "10.10.10.1",
            "id": "projects/playground-s-11-ae58ac63/regions/europe-west1/subnetworks/subnet-01",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "subnet-01",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ae58ac63/global/networks/customvpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "playground-s-11-ae58ac63",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ae58ac63/regions/europe-west1/subnetworks/subnet-01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "us-central1/subnet-02",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-12T23:06:33.604-08:00",
            "description": "This subnet has a description",
            "gateway_address": "10.10.20.1",
            "id": "projects/playground-s-11-ae58ac63/regions/us-central1/subnetworks/subnet-02",
            "ip_cidr_range": "10.10.20.0/24",
            "name": "subnet-02",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ae58ac63/global/networks/customvpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "playground-s-11-ae58ac63",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ae58ac63/regions/us-central1/subnetworks/subnet-02",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "us-west1/subnet-03",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-12T23:06:34.705-08:00",
            "gateway_address": "10.10.30.1",
            "id": "projects/playground-s-11-ae58ac63/regions/us-west1/subnetworks/subnet-03",
            "ip_cidr_range": "10.10.30.0/24",
            "name": "subnet-03",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ae58ac63/global/networks/customvpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "playground-s-11-ae58ac63",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ae58ac63/regions/us-west1/subnetworks/subnet-03",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/playground-s-11-ae58ac63/global/networks/customvpc",
            "mtu": 0,
            "name": "customvpc",
            "project": "playground-s-11-ae58ac63",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ae58ac63/global/networks/customvpc"
          }
        }
      ]
    }
  ]
}